Fixed background clipping

--- a/src/main.css
+++ b/src/main.css
@@ -65,6 +65,7 @@
     width: 2404px;
     height: 982px;
     top: 0px;
+    left: 0px;
 
     background: url(../src/assets/background-01.png);
     background-repeat: repeat-x;
